--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 /* Chỉnh sửa giao diện, màu sắc, font chữ,..v..v.. */
 a {
   color: rgb(34, 112, 172);
- font-family: cursive;
-}
+  font-family: 'Roboto', sans-serif;}
 .h1{
   color: red;
 }
