--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Chỉnh sửa giao diện, màu sắc, font chữ,..v..v.. */
 a {
   color: rgb(34, 112, 172);
-  font-family: 'Roboto', sans-serif;}
+}
 .h1{
   color: red;
 }
@@ -11,4 +11,6 @@ a {
 .thoi{
   color:#b16baa;
 }
-
+h1 {
+  font-family: 'Roboto', sans-serif;
+}
